[gd_scene load_steps=15 format=3 uid="uid://675eneogwoe1"]

[ext_resource type="Shader" uid="uid://cfc0le7wi6ka0" path="res://shaders/base_floor.gdshader" id="1_3nuxk"]
[ext_resource type="Script" uid="uid://cnopg0jcbgoo1" path="res://scripts/grid_manager.gd" id="1_3p16f"]
[ext_resource type="Script" uid="uid://bqfpy7m8bp5eb" path="res://scripts/base_map.gd" id="1_yv3mv"]
[ext_resource type="PackedScene" uid="uid://crmrqhynvpoxo" path="res://scenes/camera_gimble.tscn" id="2_4ww3n"]
[ext_resource type="Script" uid="uid://da8cskjg11dt5" path="res://scripts/floor.gd" id="2_e6k12"]
[ext_resource type="PackedScene" uid="uid://hfsj4vsntw7e" path="res://scenes/player_character.tscn" id="5_e6k12"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3nuxk"]
size = Vector3(50, 0, 50)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o23v6"]
render_priority = 0
shader = ExtResource("1_3nuxk")
shader_parameter/albedo_color = Color(0.29803923, 0.75686276, 0.24705882, 1)

[sub_resource type="QuadMesh" id="QuadMesh_4ww3n"]
material = SubResource("ShaderMaterial_o23v6")
size = Vector2(50, 50)
orientation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yv3mv"]
render_priority = 0
shader = ExtResource("1_3nuxk")
shader_parameter/albedo_color = Color(0.12833649, 0.33872536, 0.10488608, 1)

[sub_resource type="QuadMesh" id="QuadMesh_ejtyh"]
material = SubResource("ShaderMaterial_yv3mv")
center_offset = Vector3(0, 0.001, 0)
orientation = 1

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3nuxk"]
sky_top_color = Color(0.5294118, 0.80784315, 0.92156863, 1)
sky_horizon_color = Color(0.6134933, 0.7402256, 1, 1)

[sub_resource type="Sky" id="Sky_o23v6"]
sky_material = SubResource("ProceduralSkyMaterial_3nuxk")

[sub_resource type="Environment" id="Environment_4ww3n"]
background_mode = 2
sky = SubResource("Sky_o23v6")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)
ambient_light_energy = 1.2
tonemap_exposure = 1.5
tonemap_white = 8.0
glow_enabled = true
glow_intensity = 0.5
glow_strength = 0.8
glow_bloom = 0.1
glow_hdr_threshold = 0.8

[node name="BaseMap" type="Node3D"]
script = ExtResource("1_yv3mv")

[node name="GridManager" type="Node3D" parent="."]
script = ExtResource("1_3p16f")

[node name="Floor" type="StaticBody3D" parent="."]
disable_mode = 1
script = ExtResource("2_e6k12")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_3nuxk")

[node name="FloorMesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("QuadMesh_4ww3n")
skeleton = NodePath("../..")

[node name="HighlightMesh" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("QuadMesh_ejtyh")
skeleton = NodePath("../..")

[node name="CameraGimble" parent="." instance=ExtResource("2_4ww3n")]
transform = Transform3D(1, 0, 0, 0, 0.7071067, 0.7071067, 0, -0.7071067, 0.7071067, 0, 10, 25)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4ww3n")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.70710677, -0.49999997, 0.49999997, 0, 0.70710677, 0.70710677, -0.70710677, -0.49999997, 0.49999997, 0, 22.252148, 0)
light_color = Color(1, 0.9149128, 0.63273996, 1)
light_energy = 2.0
shadow_enabled = true
shadow_bias = 0.4
shadow_normal_bias = 1.0

[node name="PlayerCharacter" parent="." instance=ExtResource("5_e6k12")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
